--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">iHome</string>
+    <string name="where">Bedroom, Bathroom, Living Room</string>
 </resources>
