--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">iHome</string>
     <string name="where">Bedroom, Bathroom, Living Room</string>
-    <string name="humid_percent">%</string>
-    <string name="temp_celsius">℃</string>
+    <string name="humid_percent">Humidity %</string>
+    <string name="temp_celsius">Temperature ℃</string>
 </resources>
