--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,4 +13,5 @@
     <string name="temp_celsius">celsius</string>
     <string name="percentage"><![CDATA[percentage(%)>]]></string>
     <string name="symbol">%</string>
+    <string name="status">Status :</string>
 </resources>
